--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,400i,500,500i,700,700i,900,900i&display=swap" rel="stylesheet">
     <title>Petlife | E-commerce para Pet Shop</title>
   </head>
   <body>
